@@ -85,8 +85,11 @@ Once you run a command, the lower panel will switch to command output mode,
 where you can see any text the command printed to the screen. If you want to
 see more help text as you run further commands, you can switch the lower panel
 back to help mode with :kbd:`Ctrl`:kbd:`T`. The output text is kept for all the
-commands you run while the launcher window is open, but is cleared if you
-dismiss the launcher window and bring it back up.
+commands you run while the launcher window is open (up to 256KB of text), but
+only the most recent 32KB of text is saved if you dismiss the launcher window
+and bring it back up. Command output is also printed to the external DFHack
+console (the one you can show with `show` on Windows) or the parent terminal on
+Unix-based systems if you need a longer history of the output.
 
 Command history
 ---------------
